deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-words
  labels:
    app: reverse-words
spec:
  template:
    spec:
      containers:
      - name: reverse-words
        image: quay.io/mavazque/tekton-reversewords:latest
