route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: reverse-words
    # app.kubernetes.io/instance: reverse-words-stage
  name: reverse-words
  namespace: reverse-words-stage
spec:
  host: >-
    reverse-words-reverse-words-stage.apps.6671a3291f90f5001f693943.cloud.techzone.ibm.com
  port:
    targetPort: http
  to:
    kind: Service
    name: reverse-words
    weight: 100
  wildcardPolicy: None
